--- a/기초프로그래밍/기초 프로그래밍_8주차(중간고사).ipynb
+++ b/기초프로그래밍/기초 프로그래밍_8주차(중간고사).ipynb
@@ -15,7 +15,29 @@
       "문자열을 입력하시오\n",
       "AGTTTGAGTGA\n",
       "3번째~5번째 문자열\n",
-      "TTT\n",
+      "TTT\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 1\n",
+    "\n",
+    "print(\"문자열을 입력하시오\")\n",
+    "string = str(input())\n",
+    "print(\"3번째~5번째 문자열\")\n",
+    "print(string[2:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "5659c282",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "문자열을 입력하시오\n",
       "AGTTTGAGTGA\n",
       "시작 문자 위치\n",
@@ -23,12 +45,63 @@
       "종료 문자 위치\n",
       "4\n",
       "2번째~4번째 문자열\n",
-      "GTT\n",
+      "GTT\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 2\n",
+    "\n",
+    "print(\"문자열을 입력하시오\")\n",
+    "string = str(input())\n",
+    "print(\"시작 문자 위치\")\n",
+    "start = int(input())\n",
+    "print(\"종료 문자 위치\")\n",
+    "end = int(input())\n",
+    "print(\"{}번째~{}번째 문자열\".format(start,end))\n",
+    "print(string[start-1:end])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5fd4c760",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "문자열을 입력하시오\n",
       "AGTTTGAGTGA\n",
       "문자 'A'의 개수 : 3개\n",
       "문자 'G'의 개수 : 4개\n",
-      "문자 'T'의 개수 : 4개\n",
+      "문자 'T'의 개수 : 4개\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 3\n",
+    "\n",
+    "print(\"문자열을 입력하시오\")\n",
+    "string = str(input())\n",
+    "string = string.replace(\" \",\"\")\n",
+    "element = sorted(list(''.join(set(string))))\n",
+    "for i in element:\n",
+    "    num = string.count(i)\n",
+    "    print(\"문자 '{}'의 개수 : {}개\".format(i,num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f2788e48",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "1번째 문자열을 입력하시오\n",
       "His\n",
       "['His']\n",
@@ -47,7 +120,35 @@
       "6번째 문자열을 입력하시오\n",
       "Met\n",
       "['His', 'Phe', 'Tyr', 'Leu', 'Pro', 'Met']\n",
-      "acronym : HPTLPM\n",
+      "acronym : HPTLPM\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 문제 4\n",
+    "\n",
+    "k = 1 ; str_list = []\n",
+    "for i in range(6):\n",
+    "    print(\"{}번째 문자열을 입력하시오\".format(k))\n",
+    "    string = str(input())\n",
+    "    str_list.append(string)\n",
+    "    print(str_list)\n",
+    "\n",
+    "    k += 1\n",
+    "front = list([j[0] for j in str_list])\n",
+    "print('acronym : {}'.format(\"\".join(front)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9df6c182",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "peptide = ['His', 'Phe', 'Tyr', 'Leu', 'Pro', 'Met']\n",
       "cost = [4, 7, 3, 5, 8, 1]\n",
       "개수를 입력하시오\n",
@@ -63,47 +164,6 @@
     }
    ],
    "source": [
-    "# 문제 1\n",
-    "\n",
-    "print(\"문자열을 입력하시오\")\n",
-    "string = str(input())\n",
-    "print(\"3번째~5번째 문자열\")\n",
-    "print(string[2:5])\n",
-    "\n",
-    "# 문제 2\n",
-    "\n",
-    "print(\"문자열을 입력하시오\")\n",
-    "string = str(input())\n",
-    "print(\"시작 문자 위치\")\n",
-    "start = int(input())\n",
-    "print(\"종료 문자 위치\")\n",
-    "end = int(input())\n",
-    "print(\"{}번째~{}번째 문자열\".format(start,end))\n",
-    "print(string[start-1:end])\n",
-    "\n",
-    "# 문제 3\n",
-    "\n",
-    "print(\"문자열을 입력하시오\")\n",
-    "string = str(input())\n",
-    "string = string.replace(\" \",\"\")\n",
-    "element = sorted(list(''.join(set(string))))\n",
-    "for i in element:\n",
-    "    num = string.count(i)\n",
-    "    print(\"문자 '{}'의 개수 : {}개\".format(i,num))\n",
-    "\n",
-    "# 문제 4\n",
-    "\n",
-    "k = 1 ; str_list = []\n",
-    "for i in range(6):\n",
-    "    print(\"{}번째 문자열을 입력하시오\".format(k))\n",
-    "    string = str(input())\n",
-    "    str_list.append(string)\n",
-    "    print(str_list)\n",
-    "\n",
-    "    k += 1\n",
-    "front = list([j[0] for j in str_list])\n",
-    "print('acronym : {}'.format(\"\".join(front)))\n",
-    "\n",
     "# 문제 5\n",
     "\n",
     "peptide = ['His','Phe','Tyr','Leu','Pro','Met']\n",
