--- a/기초프로그래밍/기초 프로그래밍_11주차.ipynb
+++ b/기초프로그래밍/기초 프로그래밍_11주차.ipynb
@@ -36,7 +36,7 @@
     "    i = i.strip('.')\n",
     "    count[i] = count.get(i,0) + 1\n",
     "\n",
-    "print(count)\n"
+    "print(count)"
    ]
   }
  ],
