--- a/기초프로그래밍/기초 프로그래밍_12주차.ipynb
+++ b/기초프로그래밍/기초 프로그래밍_12주차.ipynb
@@ -47,7 +47,7 @@
     "DD = [[(yy[0]-yy[1]) for yy in zip(*y)] for y in zip(A,B)]\n",
     "print(\"\\n<리스트 컴프리헨션>\")\n",
     "print(\"C =\",CC)\n",
-    "print(\"D =\",DD)\n"
+    "print(\"D =\",DD)"
    ]
   }
  ],
