--- a/기초프로그래밍/기초 프로그래밍_15주차(기말고사).ipynb
+++ b/기초프로그래밍/기초 프로그래밍_15주차(기말고사).ipynb
@@ -3,6 +3,24 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "b453243e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "#path= os.path.dirname(os.path.abspath(__file__)) # 현재 파일 경로 얻기\n",
+    "path = \"C:/Users/hjm01/Desktop/대학원/AI를 위한 기초 프로그래밍\"\n",
+    "os.chdir(path) # 경로 변경\n",
+    "\n",
+    "file_list = os.listdir() # 파일 리스트 얻기\n",
+    "file_txt = [file for file in file_list if file.endswith(\"yesterday.txt\")][0] # .txt로 끝나는 텍스트 파일만 필터링\n",
+    "txt = open(file_txt,'r').read() # 파일 불러오기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "da427752",
    "metadata": {},
    "outputs": [
@@ -25,16 +43,6 @@
     }
    ],
    "source": [
-    "import os\n",
-    "\n",
-    "#path= os.path.dirname(os.path.abspath(__file__)) # 현재 파일 경로 얻기\n",
-    "path = \"C:/Users/hjm01/Desktop/대학원/AI를 위한 기초 프로그래밍\"\n",
-    "os.chdir(path) # 경로 변경\n",
-    "\n",
-    "file_list = os.listdir() # 파일 리스트 얻기\n",
-    "file_txt = [file for file in file_list if file.endswith(\"yesterday.txt\")][0] # .txt로 끝나는 텍스트 파일만 필터링\n",
-    "txt = open(file_txt,'r').read() # 파일 불러오기\n",
-    "\n",
     "# [문제 1]\n",
     "\n",
     "\n",
@@ -56,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b9352d2e",
    "metadata": {},
    "outputs": [
@@ -107,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9acd39d5",
    "metadata": {},
    "outputs": [
@@ -115,7 +123,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "URL 입력 :  https://www.ncbi.nlm.nih.gov/genbank/samplerecord/\n",
+      "URL 입력 : https://www.ncbi.nlm.nih.gov/genbank/samplerecord/\n",
       "1 gatcctccat atacaacggt atctccacct caggtttaga tctcaacaac ggaaccattg\n",
       "61 ccgacatgag acagttaggt atcgtcgaga gttacaagct aaaacgagca gtagtcagct\n",
       "121 ctgcatctga agccgctgaa gttctactaa gggtggataa catcatccgt gcaagaccaa\n",
@@ -219,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "97736d73",
    "metadata": {
     "scrolled": false
