--- a/기초프로그래밍/기초 프로그래밍_4주차.ipynb
+++ b/기초프로그래밍/기초 프로그래밍_4주차.ipynb
@@ -18,21 +18,7 @@
       "4: ['kiwi', 'apple', 'mango', 'banana', 'melon']\n",
       "5: ['kiwi', 'apple', 'mango', 'banana', 'melon']\n",
       "6: ['kiwi', 'mango', 'melon']\n",
-      "7: mango\n",
-      "1: ['orange', 'banana', 'avocado', 'melon', 'Grapes']\n",
-      "2: ['black', 'blue', 'green', 'white', 'red']\n",
-      "3: fruit : orange, color : black\n",
-      "fruit : banana, color : blue\n",
-      "fruit : avocado, color : green\n",
-      "fruit : melon, color : white\n",
-      "fruit : Grapes, color : red\n",
-      "fruit에서 출력할 원소의 인덱스 번호를 입력하세요 : 1\n",
-      "4-1: banana\n",
-      "color에서 출력할 원소의 인덱스 번호를 입력하세요 : 2\n",
-      "4-2: green\n",
-      "5보다 작은 정수 n을 입력하세요 : 3\n",
-      "5: ['orange', 'banana', 'avocado', 'melon']\n",
-      "['black', 'blue', 'green', 'white']\n"
+      "7: mango\n"
      ]
     }
    ],
@@ -64,8 +50,37 @@
     "print(\"6:\",list[::2])\n",
     "\n",
     "# 7\n",
-    "print(\"7:\",list[2])\n",
-    "\n",
+    "print(\"7:\",list[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "25d28003",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1: ['orange', 'banana', 'avocado', 'melon', 'Grapes']\n",
+      "2: ['black', 'blue', 'green', 'white', 'red']\n",
+      "3: fruit : orange, color : black\n",
+      "fruit : banana, color : blue\n",
+      "fruit : avocado, color : green\n",
+      "fruit : melon, color : white\n",
+      "fruit : Grapes, color : red\n",
+      "fruit에서 출력할 원소의 인덱스 번호를 입력하세요 : 1\n",
+      "4-1: banana\n",
+      "color에서 출력할 원소의 인덱스 번호를 입력하세요 : 2\n",
+      "4-2: green\n",
+      "5보다 작은 정수 n을 입력하세요 : 3\n",
+      "5: ['orange', 'banana', 'avocado', 'melon']\n",
+      "['black', 'blue', 'green', 'white']\n"
+     ]
+    }
+   ],
+   "source": [
     "# [문제 2]\n",
     "\n",
     "# 1\n",
