--- a/기초프로그래밍/기초 프로그래밍_5주차.ipynb
+++ b/기초프로그래밍/기초 프로그래밍_5주차.ipynb
@@ -3,10 +3,8 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "10648f44",
-   "metadata": {
-    "scrolled": true
-   },
+   "id": "d8582abb",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -17,7 +15,31 @@
       "coffee 이름 : latte\n",
       "['americano', 'latte']\n",
       "coffee 이름 : hazelnut\n",
-      "['americano', 'latte', 'hazelnut']\n",
+      "['americano', 'latte', 'hazelnut']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# [문제1]\n",
+    "\n",
+    "i = 0\n",
+    "list = []\n",
+    "while i < 3 :\n",
+    "    list.append(input(\"coffee 이름 : \"))\n",
+    "    print(list)\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6d1e1daa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "americano 주문 수 : 2\n",
       "[2]\n",
       "latte 주문 수 : 3\n",
@@ -29,36 +51,13 @@
       "americano\n",
       "latte\n",
       "latte\n",
-      "latte\n",
-      "<난수발생>\n",
-      "[86, 79, 0, 5, 93, 13, 78, 11, 66, 93]\n",
-      "524\n",
-      "<DNA 염기서열 AGCT>\n",
-      "T\n",
-      "A\n",
-      "G\n",
-      "G\n",
-      "T\n",
-      "T\n",
-      "C\n",
-      "A\n",
-      "G\n",
-      "A\n"
+      "latte\n"
      ]
     }
    ],
    "source": [
-    "# [문제1]\n",
+    "# [문제2]\n",
     "\n",
-    "# 1\n",
-    "i = 0\n",
-    "list = []\n",
-    "while i < 3 :\n",
-    "    list.append(input(\"coffee 이름 : \"))\n",
-    "    print(list)\n",
-    "    i += 1\n",
-    "\n",
-    "# 2\n",
     "num_list = []\n",
     "coffee_list = ['americano','latte','hazelnut']\n",
     "for i in coffee_list:\n",
@@ -68,16 +67,62 @@
     "print(\"<주문하신 커피 리스트>\")\n",
     "for coffee,num in zip(coffee_list,num_list):\n",
     "    for i in range(num):\n",
-    "        print(coffee)\n",
+    "        print(coffee)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "dec1ae59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<난수발생>\n",
+      "[7, 8, 6, 8, 73, 3, 7, 87, 11, 49]\n",
+      "259\n"
+     ]
+    }
+   ],
+   "source": [
+    "# [문제3]\n",
     "\n",
-    "# 3\n",
     "from random import randint, choice\n",
     "print(\"<난수발생>\")\n",
     "number = [randint(0,100) for i in range(10)]\n",
     "print(number)\n",
-    "print(sum(number))\n",
+    "print(sum(number))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "97109af3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<DNA 염기서열 AGCT>\n",
+      "C\n",
+      "A\n",
+      "T\n",
+      "A\n",
+      "A\n",
+      "G\n",
+      "A\n",
+      "T\n",
+      "C\n",
+      "T\n"
+     ]
+    }
+   ],
+   "source": [
+    "# [문제4]\n",
     "\n",
-    "# 4\n",
     "DNA = ['A','G','C','T']\n",
     "print(\"<DNA 염기서열 AGCT>\")\n",
     "for i in [randint(0,3) for i in range(10)]:\n",
