--- a/기초프로그래밍/기초 프로그래밍_9주차.ipynb
+++ b/기초프로그래밍/기초 프로그래밍_9주차.ipynb
@@ -3,10 +3,26 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c58f6302",
-   "metadata": {
-    "scrolled": true
-   },
+   "id": "59bdfbc9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "#path= os.path.dirname(os.path.abspath(__file__)) # 현재 파일 경로 얻기\n",
+    "path = \"C:/Users/hjm01/Desktop/대학원/AI를 위한 기초 프로그래밍\"\n",
+    "os.chdir(path) # 경로 변경\n",
+    "\n",
+    "file_list = os.listdir() # 파일 리스트 얻기\n",
+    "file_txt = [file for file in file_list if file.endswith(\".txt\")][0] # .txt로 끝나는 텍스트 파일만 필터링\n",
+    "txt = open(file_txt,'r').readlines() # 파일 불러오기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "621b9513",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -15,14 +31,55 @@
       "All's well that ends well.\n",
       "Bad news travels fast.\n",
       "Well begun is half done.\n",
-      "Birds of a feather flock together.\n",
+      "Birds of a feather flock together.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# [문제 1]\n",
+    "\n",
+    "for i in txt:\n",
+    "    print(i.strip('\\n'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "54c4a7e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "파일이름 : proverbs \n",
       "\n",
       "All's well that ends well.\n",
       "Bad news travels fast.\n",
       "Well begun is half done.\n",
-      "Birds of a feather flock together.\n",
+      "Birds of a feather flock together.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# [문제 2]\n",
+    "\n",
+    "print(\"\\n파일이름 : {}\".format(file_txt.split('.')[0]),'\\n')\n",
+    "for i in txt:\n",
+    "    print(i.strip('\\n'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "1c9c0789",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "파일이름 : proverbs\n",
       "\n",
@@ -52,7 +109,32 @@
       "a\n",
       "feather\n",
       "flock\n",
-      "together.\n",
+      "together.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# [문제 3]\n",
+    "\n",
+    "print(\"\\n파일이름 : {}\".format(file_txt.split('.')[0]))\n",
+    "for i in txt:\n",
+    "    ch_list = i.split()\n",
+    "    print('')\n",
+    "    print(i.strip('\\n'))\n",
+    "    for j in ch_list:\n",
+    "        print(j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "66ec8b4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "파일이름 : proverbs\n",
       "\n",
@@ -87,37 +169,6 @@
     }
    ],
    "source": [
-    "import os\n",
-    "\n",
-    "#path= os.path.dirname(os.path.abspath(__file__)) # 현재 파일 경로 얻기\n",
-    "path = \"C:/Users/hjm01/Desktop/대학원/AI를 위한 기초 프로그래밍\"\n",
-    "os.chdir(path) # 경로 변경\n",
-    "\n",
-    "file_list = os.listdir() # 파일 리스트 얻기\n",
-    "file_txt = [file for file in file_list if file.endswith(\".txt\")][0] # .txt로 끝나는 텍스트 파일만 필터링\n",
-    "txt = open(file_txt,'r').readlines() # 파일 불러오기\n",
-    "\n",
-    "# [문제 1]\n",
-    "\n",
-    "for i in txt:\n",
-    "    print(i.strip('\\n'))\n",
-    "\n",
-    "# [문제 2]\n",
-    "\n",
-    "print(\"\\n파일이름 : {}\".format(file_txt.split('.')[0]),'\\n')\n",
-    "for i in txt:\n",
-    "    print(i.strip('\\n'))\n",
-    "\n",
-    "# [문제 3]\n",
-    "\n",
-    "print(\"\\n파일이름 : {}\".format(file_txt.split('.')[0]))\n",
-    "for i in txt:\n",
-    "    ch_list = i.split()\n",
-    "    print('')\n",
-    "    print(i.strip('\\n'))\n",
-    "    for j in ch_list:\n",
-    "        print(j)\n",
-    "\n",
     "# [문제 4]\n",
     "\n",
     "print(\"\\n파일이름 : {}\".format(file_txt.split('.')[0]))\n",
@@ -126,7 +177,7 @@
     "    print('')\n",
     "    print(i.strip('\\n'))\n",
     "    for j in ch_list:\n",
-    "        print(j.strip('.'))\n"
+    "        print(j.strip('.'))"
    ]
   }
  ],
